# movies_ugc

./: .env.local  .env.local.template  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README-old.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  mkdocs2.yml  pyproject.toml  setup.cfg
.github/workflows/: build-docs.yml  lint.yml
docker/: index-2.md
docker/app/: Dockerfile  Dockerfile-0
docker/app/scripts/: start.sh  wait-dependencies.sh
docker/clickhouse/: initer.Dockerfile  node-keeper.Dockerfile  node-with-keeper.Dockerfile  node.Dockerfile
docker/clickhouse-initer/: Dockerfile
docker/clickhouse-initer/scripts/: wait-dependencies.sh
docker/clickhouse/config/: enable_keeper.xml  metrika.xml
docker/clickhouse/initdb/: 0000-create-db.sh  0010-create-table-views_progress.sh
docker/clickhouse/initer/: Dockerfile
docker/clickhouse/scripts/: start.sh  wait-dependencies.sh
docker/kafka/broker/: Dockerfile
docker/kafka/initer/: Dockerfile
docker/kafka/schema_registry/: Dockerfile
docker/mongo/: Dockerfile
docker/mongo/initer/: Dockerfile
docker/mongo/scripts/: entrypoint.sh  init-configserver.js  init-router.js  init-shard01.js  init-shard02.js  start.sh  wait-dependencies.sh
docker/python/: Dockerfile
docker/scripts/: colors.sh  helpers.sh  logger.sh
docker/tests/: Dockerfile
docker/tests/scripts/: start.sh  wait-dependencies.sh
docs/: add-movie-viewing.puml  index.md
docs/assets/css/: termynal.css
docs/assets/js/: custom.js
docs/development/: conventional-commits.md  ide.md  intro.md  lint.md  migrations.md  requirements.md  style-guides.md
docs/development-env/: init.md  pre-commit-hooks.md
docs/git/: git-flow.md
docs/launching/: docker.md  envs.md  launch.md  local.md  tests.md
docs/oauth2/: clients.md  developers.md  intro.md
init_db/clickhouse/: 00010_create_database_movies.sql  00020_create_table_views_progress.sql  00030_create_table_movie_viewing.sql
init_db/kafka/schema_registry/: 00010_schema_movie_playback_event.json  00020_schema_current_playback_position.json  00030_schema_movie_viewing.json
init_db/kafka/topics/: 00010_topic_movie_playback_event.json  00020_topic_current_playback_position.json  00030_topic_movie_viewing.json
init_db/mongo/: cluster-config.json
src/: benchmarks.py  db_upgrade.py  db_upgrade_local.py  init_db.py  load_data.py  main.py  main2.py  main3.py  olap_db_initer.py  oltp_db_initer.py  services.py  settings.py  utils.py
src/adapters/: base.py  models.py
src/adapters/clickhouse/: client.py
src/adapters/data_gateways/: movie_viewing.py
src/api/v1/: __init__.py
src/app/: __init__.py  event_handlers.py  exception_handler.py  factories.py
src/config/: __clickhouse_config.json  clickhouse_config.json  logger.py  settings.py
src/core/: settings.py
src/db/: base.py  models.py
src/dependencies/: data_gateaways.py  interactors.py
src/internal/: responses.py
src/models/: mixins.py  movies.py  users.py
src/movies_ugc/: clickhouse_initer.py  etl_kafka_clickhouse.py  kafka_initer.py  main.py  mongo_db_initer.py  mongo_initer.py  olap_db_initer.py  oltp_db_initer.py
src/research/: load_to_ch.py
src/utils/: helpers.py
tests/: conftest.py
(+120 files in other folders)
