[tool.poetry]
name = "movies-ugc"
version = "0.1.0"
description = "Analytics service for movies"
authors = ["Denis <xczdenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
backoff = "^2.2.1"
clickhouse-driver = "^0.2.5"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
orjson = "^3.8.6"
aiokafka = "^0.8.0"
requests = "^2.28.2"
jsonschema = "^4.17.3"
python-schema-registry-client = "^2.4.1"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
