[tool.poetry]
name = "movies-ugc"
version = "0.1.0"
description = "Analytics service for movies"
authors = ["Denis <xczdenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
backoff = "^2.2.1"
clickhouse-driver = "^0.2.5"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
orjson = "^3.8.6"
aiokafka = "^0.8.0"
requests = "^2.28.2"
jsonschema = "^4.17.3"
python-schema-registry-client = "^2.4.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
flake8-quotes = "^3.3.2"
pep8-naming = "^0.13.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[tool.black]
line-length = 110

[tool.isort]
line_length = 88
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
